2008-10-16  Bruno coudoin  <bruno.coudoin@free.fr>

        - Created Ukrainian word list by Slava Dubrovskiy

	* boards/wordsgame/default-uk.xml:

2008-10-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Added missing manual entry.

	* boards/chess_computer.xml.in:
	* boards/chess_movelearn.xml.in:
	* boards/chess_partyend.xml.in:
	* boards/mosaic.xml.in:

2008-10-13  Bruno coudoin  <bruno.coudoin@free.fr>

	Added missing local like Hebrew.

	* docs/gcompris2spip.pl:
	* docs/spip_screenshot_remove.pl:

2008-10-11  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added missing babyshapes/board8_*.xml

	* po/POTFILES.in:

	*** RELEASE 8.4.7 ***

2008-10-05  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/wordsgame/default-he.xml: Created Hebrew words by Jorge Mariano.

2008-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Bug http://bugzilla.gnome.org/show_bug.cgi?id=520829
	* boards/voices/nl/misc/click_on_letter.ogg: rerecorded by
	  original author Marina Snaaijer

2008-09-21  Bruno coudoin  <bruno.coudoin@free.fr>

	Zohra Coudoin recorded most activities introduction in French
	and English.
	Now when you enter an activity it is explained.
	* boards/voices/fr/intro/*
	* boards/voices/en/intro/*
	* fr/alphabet/'all_letters'.ogg have been remade by Zohra.

2008-09-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Rerecoded Somalian costa_rica.ogg by Mohamed I. Mursal
	* voices/so/geography/costa_rica.ogg

2008-09-02  Bruno coudoin  <bruno.coudoin@free.fr>

	Added more levels to the babyshape activity. This levels are based
	on famous paintings, the children must drag missing part of the paintings
	back to their proper places.
	This is a contribution of Marc Levivier (malev free fr):

	* boards/babyshapes.xml.in:
	* boards/babyshapes/Makefile.am:
	* boards/babyshapes/board8_0.xml.in:
	* boards/babyshapes/board8_1.xml.in:
	* boards/babyshapes/board8_2.xml.in:
	* boards/babyshapes/board8_3.xml.in:
	* boards/babyshapes/board8_4.xml.in:
